<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".part4.DetailPageFragment3">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        style="@style/textStyleTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        style="@style/textStyleRegular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name"/>

    <ImageView
        android:id="@+id/weather_img"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_sunny"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day"/>

    <TextView
        android:id="@+id/weather_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyleDegree"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_img"/>

    <TextView
        android:id="@+id/weather_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weather"
        style="@style/textStyleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_degree"/>

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wind"
        style="@style/textStyleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_status"/>

    <ImageView
        android:id="@+id/wind_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/ic_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wind"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:text="@string/wind_speed"
        style="@style/textStyleRegular"
        app:layout_constraintStart_toEndOf="@+id/wind_img"
        app:layout_constraintTop_toBottomOf="@id/wind"/>

    <TextView
        android:id="@+id/friday_gap_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_gap"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        style="@style/textStyleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/thursday_gap_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_gap"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        style="@style/textStyleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/friday_gap_speed"/>

    <TextView
        android:id="@+id/wednesday_gap_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_gap"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        style="@style/textStyleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/thursday_gap_speed"/>

    <TextView
        android:id="@+id/tuesday_gap_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_gap"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        style="@style/textStyleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/wednesday_gap_speed"/>

    <TextView
        android:id="@+id/day_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_friday"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="40dp"
        style="@style/textStyleMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/day_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_thursday"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="15dp"
        style="@style/textStyleMedium"
        app:layout_constraintBottom_toTopOf="@id/day_friday"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/day_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_wednesday"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="15dp"
        style="@style/textStyleMedium"
        app:layout_constraintBottom_toTopOf="@id/day_thursday"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/day_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_tuesday"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="15dp"
        style="@style/textStyleMedium"
        app:layout_constraintBottom_toTopOf="@id/day_wednesday"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/friday_rainy_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_rainy"
        android:layout_marginBottom="33dp"
        app:layout_constraintStart_toEndOf="@id/day_friday"
        app:layout_constraintEnd_toStartOf="@id/friday_gap_speed"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/thursday_sunny_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_sunny"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/day_thursday"
        app:layout_constraintEnd_toStartOf="@id/thursday_gap_speed"
        app:layout_constraintBottom_toBottomOf="@id/friday_rainy_img"/>

    <ImageView
        android:id="@+id/wednesday_cloud_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_cloudy"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/day_wednesday"
        app:layout_constraintEnd_toStartOf="@id/wednesday_gap_speed"
        app:layout_constraintBottom_toBottomOf="@id/thursday_sunny_img"/>

    <ImageView
        android:id="@+id/tuesday_sunny_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_sunny"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/day_tuesday"
        app:layout_constraintEnd_toStartOf="@id/tuesday_gap_speed"
        app:layout_constraintBottom_toBottomOf="@id/wednesday_cloud_img"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Verileri Güncelle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>